Finished up pretty much all styling on the coin detail page. Only error I just noticed was that when the crypto symbol wrapped down to the next line, the rank element offsets to the left. Need to fix this tomorrow.

--- a/src/components/coin/CoinInfo.module.css
+++ b/src/components/coin/CoinInfo.module.css
@@ -1,26 +1,31 @@
 .container {
   height: 25rem;
-  max-width: 80%;
+  width: 90%;
+  max-width: 40rem;
   margin: auto;
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  background-color: coral;
+  /* background-color: coral; */
 }
 
-.container div {
-  margin: 2rem 1rem;
+.coinNameAndLogo {
+  margin: 1rem 1rem;
 }
 
 .nameAndRank {
   display: flex;
+  flex-wrap: wrap;
+  justify-items: flex-start;
+  margin: 1rem 1rem;
 }
 
 .nameAndRank p {
-  display: block;
+  width: 100%;
+  display: flex;
+  margin: 0;
 }
 
-.break {
-  flex-basis: 100%;
-  height: 0;
+.rank {
+  width: auto;
 }
